--- a/index.html
+++ b/index.html
@@ -1,96 +1,104 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="UTF-8">
-  <title>Contatos - Mirai Flores</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" type="text/css" media="all">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="icon" href="icon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Contatos - Mirai Flores</title>
+	<link href="style.css" rel="stylesheet" />
+	<link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" media="all" rel="stylesheet" type="text/css" />
+	<link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" rel="stylesheet" />
+	<link href="icon.png" rel="icon" type="image/x-icon" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
-
 <body>
 
-  <img id="userPhoto" src="icon.png " alt="User Photo" style="margin-top: 30px;">
-  <h1 id="fontH1"> Mirai Flores</h1>
-  <p style="margin-bottom: 30px;">💐Uma Floricultura Completa</p>
-  <div id="links">
-    <a class="link" href="https://api.whatsapp.com/send?phone=5522997517940" target="_blank"><i
-        class="fa fa-whatsapp"></i> Conversar no Whatsapp</a>
-    <a class="link"
-      href="https://www.ifood.com.br/delivery/itaperuna-rj/mirai-flores-floricultura-centro/15886a55-4be8-4ecd-84e3-4b4aedceb1c6"
-      target="_blank"><i class="fa fa-mobile"></i></i> Estamos no Ifood</a>
+  <!--Header com o carrossel com as imagens-->
+  <header>
+    <div class="slider">
+      <img src="./assets/images/banner-img-1.jpg" class="selected">
+      <img src="./assets/images/banner-img-2.jpg" alt="">
+    </div>
+    
+  </header>
+ <!--Código Javascript para transição das imagens-->
+<script src="./scripts/slide.js"></script>
 
-    <a class="link" href="https://www.miraiflores.com.br" target="_blank"><i class="fa fa-shopping-cart"></i> Nosso
-      Site</a>
-    <a class="link" href="https://g.page/miraiflores" target="_blank"><i class="fa fa-map-marker"></i> Nossa
-      Localização</a>
-    <a class="link" href="https://chat.whatsapp.com/HPvORf4B1LF0OrWpXS05zQ" target="_blank"><i
-        class="fa fa-percent"></i> Promoções
-      Whatsapp</a>
-
+<div class="company-info">
+  <div class="company-name">
+    <h1 id="fontH1" >Mirai Flores</h1>
+    <p style="color: white;">🌼Uma Floricultura Completa</p>
   </div>
+  <img alt="User Photo" src="./assets/images/ico-mf.png" />
+</div>
 
+<div id="links">
+  <a class="link" href="https://api.whatsapp.com/send?phone=5522997517940&text=Oi! Vim atráves do link de contato, pode me ajudar?" target="_blank">💬Atendimento por Whatsapp</a> 
+  <!-- <a class="link" href="https://miraiflores.smartpos.app/">🌺Mercado das Flores</a> --> 
+  <a class="link" href="https://www.ifood.com.br/delivery/itaperuna-rj/mirai-flores-floricultura-centro/15886a55-4be8-4ecd-84e3-4b4aedceb1c6">🛒Compre pelo Ifood</a>  
+  <a class="link" href="https://www.miraiflores.com.br" target="_blank">🏗️Nosso Site(⚠️Em Manuten&ccedil;&atilde;o)</a>
+  <a class="link" href="https://g.page/miraiflores" target="_blank">🛰️Nossa Localiza&ccedil;&atilde;o</a>
+  <a class="link" href="https://fotos.miraiflores.com.br/" target="_blank">📷Galeria de Fotos</a> 
+  <a class="link" id="myBtn" target="_blank">🏷️Promo&ccedil;&otilde;es pelo Whatsapp</a> <!--href="https://chat.whatsapp.com/HPvORf4B1LF0OrWpXS05zQ"--></div>
 
-  <section id="social-media">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <ul class="list-unstyled text-center mb-0">
-            <li><a class="fs-30" href="https://twitter.com/FloresMirai" target="_blank" alt="Twitter">
-                <i class="fab fa-twitter"></i></a></li>
-            <li><a class="fs-30" href="https://www.facebook.com/miraiflores/" target="_blank" alt="Facebook"><i
-                  class="fab fa-facebook"></i></a></li>
-            <li><a class="fs-30" href="https://www.youtube.com/channel/UCJftgkawbRCqQa22Hh31eyg/featured"
-                target="_blank" alt="Youtube"><i class="fab fa-youtube"></i></a></li>
-            <li><a class="fs-30" href="https://www.instagram.com/miraifloress/" target="_blank" alt="Instagram"><i
-                  class="fab fa-instagram"></i></a></li>
-            <li><a class="fs-30" href="https://br.pinterest.com/miraifloress/" target="_blank" alt="Pinterest"><i
-                  class="fab fa-pinterest"></i></a></li>
-            <li><a class="fs-30" href="https://open.spotify.com/playlist/27iydupSLmQXH4CYpoYW7d?si=a8e1cb822efc48d0"
-                target="_blank" alt="spotify"><i class="fab fa-spotify"></i></a></li>
-            <li><a class="fs-30" href="https://www.tiktok.com/@miraifloress" target="_blank" alt="Tiktok"><i
-                  class="fab fa-tiktok"></i></a></li>
+<section id="social-media">
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<ul class="list-unstyled text-center mb-0">
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+	<li></li>
+</ul>
+</div>
+</div>
+</div>
+</section>
+<!-- Rodapé -->
 
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
+<footer class="text-center my-5">
+<div class="container">
+<div class="row">
+<div class="col-md-12"><img id="logotipo" src="./assets/images/logo-pix.png" width="50" /> <img id="logotipo" src="./assets/images/logo-picpay.png" width="50" /> <img id="logotipo" src="./assets/images/logo-cartaoes.jpg" width="50" /> <img id="logotipo" src="./assets/images/logo-bitcoin.jpg" width="50" /></div>
+</div>
+</div>
 
-  <footer class="text-center my-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <img id="logotipo" class="d-block m-0-auto" src="icon.png" width="60">
-          </p>
-          </a>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- Rodapé -->
+<p style="color: white;">Mirai Flores Floricultura&reg;️ | 📧 Email: lojamiraiflores@gmail.com</p>
+</footer>
+<!-- Rodapé --><!-- The Modal -->
 
+<div class="modal" id="myModal"><!-- Modal content -->
+<div class="modal-content"><span class="close">&times;</span>
 
+<p style="margin-top: 10px;">Nosso grupo de Whatsapp &eacute; focado na postagem de promo&ccedil;&otilde;es v&aacute;lidas at&eacute; durar o estoque. Somente os administradores do grupo podem realizar postagens, mantendo assim, uma melhor organiza&ccedil;&atilde;o.</p>
 
-  <!-- Javascript -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <script src="index.js"></script>
-  <script data-ad-client="ca-pub-8932008392704001" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+<p>As postagens n&atilde;o s&atilde;o di&aacute;rias, mas a sua permanecia no grupo &eacute; muito importante!</p>
+<a class="btn_wpp" href="https://chat.whatsapp.com/HPvORf4B1LF0OrWpXS05zQ" target="_blank"> Entrar no Grupo!</a></div>
+</div>
+<!--Modal Fim--></body>
+<!-- Javascript --><script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script><script data-ad-client="ca-pub-8932008392704001" async
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script><script>
+  // Obtenha o modal
+  var modal = document.getElementById("myModal");
+  // Obtenha o botão que abre o modal
+  var btn = document.getElementById("myBtn");
+  // Obtenha o elemento <span> que fecha o modal
+  var span = document.getElementsByClassName("close")[0];
+  // When the user clicks the button, open the modal 
+  btn.onclick = function () {
+    modal.style.display = "block";
+  }
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function () {
+    modal.style.display = "none";
+  }
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function (event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+</script></html>
