Projeto atualizado conforme repositorio original

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
 
-  <!--Header com o carrossel com as imagens-->
+<!--Header com o carrossel com as imagens-->
   <header>
     <div class="slider">
-      <img src="./assets/images/banner-img-1.jpg" class="selected">
-      <img src="./assets/images/banner-img-2.jpg" alt="">
+      <img src="./assets/images/1.png" class="big-image">
+      <img src="./assets/images/2.png" class="big-image" alt="">
+      <img src="./assets/images/1-small.png" class="small-image" alt="">
+      <img src="./assets/images/2-small.png" class="small-image" alt="">
     </div>
     
   </header>
@@ -26,7 +28,7 @@
     <h1 id="fontH1" >Mirai Flores</h1>
     <p style="color: white;">🌼Uma Floricultura Completa</p>
   </div>
-  <img alt="User Photo" src="./assets/images/ico-mf.png" />
+  <!--<img alt="User Photo" src="./assets/images/ico-mf.png" />-->
 </div>
 
 <div id="links">
@@ -60,7 +62,7 @@
 <footer class="text-center my-5">
 <div class="container">
 <div class="row">
-<div class="col-md-12"><img id="logotipo" src="./assets/images/logo-pix.png" width="50" /> <img id="logotipo" src="./assets/images/logo-picpay.png" width="50" /> <img id="logotipo" src="./assets/images/logo-cartaoes.jpg" width="50" /> <img id="logotipo" src="./assets/images/logo-bitcoin.jpg" width="50" /></div>
+<div class="col-md-12"><img id="logotipo" src="assets/images/logo-pix.png" width="50" /> <img id="logotipo" src="assets/images/logo-picpay.png" width="50" /> <img id="logotipo" src="assets/images/logo-cartaoes.jpg" width="50" /> <img id="logotipo" src="assets/images/logo-bitcoin.jpg" width="50" /></div>
 </div>
 </div>
 
